--- a/public/css/app.css
+++ b/public/css/app.css
@@ -201,6 +201,7 @@
     border-radius: 1rem;
     color: white;
     margin: 0.25rem;
+    text-decoration: none;
     width: 26%;
     height: 26%;
     padding: 0.5rem;
@@ -216,12 +217,17 @@
             animation-duration: 1s;
   }
 
-  .menu .menu-tile span a {
+  .menu .menu-tile:hover span {
+    color: black;
+  }
+
+  .menu .menu-tile span {
     text-align: center;
     font-size: 14px;
     font-weight: bold;
     text-decoration: none;
     color: white;
+    margin-bottom: 1rem;
   }
 
   main {
@@ -339,6 +345,7 @@
     margin: 0.25rem;
     width: 16.25%;
     height: 26%;
+    text-decoration: none;
     padding: 0.5rem;
   }
 
@@ -352,16 +359,23 @@
             animation-duration: 1s;
   }
 
-  main .menu .menu-tile span a {
+  main .menu .menu-tile:hover span {
+    color: black;
+  }
+
+  main .menu .menu-tile span {
     text-align: center;
     font-size: 14px;
     font-weight: bold;
     text-decoration: none;
     color: white;
+    margin-bottom: 1rem;
   }
 
   main .content {
     padding: 1rem;
+    display: block;
+    overflow-wrap: break-word;
   }
 
   main .hide {
@@ -469,6 +483,7 @@
     width: 6rem;
     height: 7rem;
     padding: 0.5rem;
+    text-decoration: none;
   }
 
   main .menu .menu-tile:hover {
@@ -481,12 +496,17 @@
             animation-duration: 1s;
   }
 
-  main .menu .menu-tile span a {
+  main .menu .menu-tile:hover span {
+    color: black;
+  }
+
+  main .menu .menu-tile span {
     text-align: center;
     font-size: 14px;
     font-weight: bold;
     text-decoration: none;
     color: white;
+    margin-bottom: 1rem;
   }
 
   main .content {
@@ -525,25 +545,8 @@ header .profile img {
   height: 6vh;
 }
 
-.svg-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-  text-align: center;
-}
-
-.svg-container svg {
-  position: absolute;
-  height: 80%;
-  width: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .footer {
-  position: relative;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -563,6 +566,23 @@ header .profile img {
   width: 100%;
 }
 
+.svg-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  text-align: center;
+}
+
+.svg-container svg {
+  position: absolute;
+  height: 80%;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .taken {
   background-color: red;
 }
@@ -575,11 +595,6 @@ header .profile img {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-}
-
-.content .res-record {
-  border: 1px solid white;
-  padding: 1rem;
 }
 
 .content table {
@@ -684,5 +699,10 @@ body {
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   border: 1px solid grey;
+}
+
+.flex-container {
+  position: relative;
+  border: 1px solid red;
 }
 
