--- a/resources/sass/dash/dash.scss
+++ b/resources/sass/dash/dash.scss
@@ -24,27 +24,8 @@ header{
     }
 }
 
-
-.svg-container {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%;
-    text-align: center;
-    
-    svg {
-        position: absolute;
-        height: 80%;
-        width: 80%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-}
-
 .footer{
-    position: relative;
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -65,6 +46,24 @@ header{
     }
 }
 
+.svg-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    text-align: center;
+    
+    svg {
+        position: absolute;
+        height: 80%;
+        width: 80%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
+
 .taken{
     background-color:red;
 }
@@ -75,16 +74,9 @@ header{
 
 .content{
 
-    // table with accommodation information
-
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-
-    .res-record{
-        border: 1px solid white;
-        padding: 1rem;
-    }
 
     table{
         font-size: 1.25rem;
