--- a/resources/sass/dash/dash_large.scss
+++ b/resources/sass/dash/dash_large.scss
@@ -95,6 +95,7 @@
                 width: 6rem;
                 height: 7rem;
                 padding: 0.5rem;
+                text-decoration: none;
 
                 &:hover {
                     background-color: white;
@@ -102,16 +103,19 @@
                     color: black;
                     animation-name: hover;
                     animation-duration: 1s;
+
+                    span{
+                        color: black;
+                    }
                 }
 
                 span {
-                    a{
-                        text-align: center;
-                        font-size: 14px;
-                        font-weight: bold;
-                        text-decoration: none;
-                        color: white;
-                    }
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: bold;
+                    text-decoration: none;
+                    color: white;
+                    margin-bottom: 1rem;
                 }
             }
         }
