--- a/public/css/app.css
+++ b/public/css/app.css
@@ -729,11 +729,23 @@ body {
 }
 
 .btn-default {
-  border: 1px solid white;
+  border: 1px solid grey;
   background-color: #1a1a1a;
   width: 8rem;
   padding: 0.5rem;
   border-radius: 0.25rem;
   color: white;
+  text-decoration: none;
+  text-align: center;
+}
+
+.btn-default:hover {
+  background-color: white;
+  cursor: pointer;
+  color: black;
+  -webkit-animation-name: hover;
+          animation-name: hover;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
 }
 
