--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,11 +24,21 @@ body{
 }
 
 .btn-default{
-    border: 1px solid white;
+    border: 1px solid grey;
     background-color: $darkgrey;
     width: 8rem;
     padding: 0.5rem;
     border-radius: 0.25rem;
     color: white;
+    text-decoration: none;
+    text-align: center;
+
+    &:hover{
+        background-color: white;
+        cursor: pointer;
+        color: black;
+        animation-name: hover;
+        animation-duration: 0.6s;
+    }
 }
 
