--- a/public/css/app.css
+++ b/public/css/app.css
@@ -723,20 +723,24 @@ body {
 
 .btn-panel {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1.25rem;
 }
 
 .btn-default {
   border: 1px solid grey;
   background-color: #1a1a1a;
-  width: 8rem;
   padding: 0.5rem;
   border-radius: 0.25rem;
   color: white;
   text-decoration: none;
   text-align: center;
+  margin: 0.25rem;
+}
+
+.btn-default i {
+  font-size: 18px;
 }
 
 .btn-default:hover {
@@ -747,5 +751,10 @@ body {
           animation-name: hover;
   -webkit-animation-duration: 0.6s;
           animation-duration: 0.6s;
+}
+
+.active {
+  background-color: white;
+  color: black;
 }
 
