--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,20 +18,24 @@ body{
 
 .btn-panel{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: 1.25rem;
 }
 
 .btn-default{
     border: 1px solid grey;
     background-color: $darkgrey;
-    width: 8rem;
     padding: 0.5rem;
     border-radius: 0.25rem;
     color: white;
     text-decoration: none;
     text-align: center;
+    margin: 0.25rem;
+
+    i{
+        font-size: 18px;
+    }
 
     &:hover{
         background-color: white;
@@ -40,5 +44,10 @@ body{
         animation-name: hover;
         animation-duration: 0.6s;
     }
+}
+
+.active{
+    background-color: white;
+    color: black;
 }
 
