--- a/resources/sass/dash/dash.scss
+++ b/resources/sass/dash/dash.scss
@@ -65,7 +65,11 @@ header{
 }
 
 .taken{
+    display: block;
     background-color:red;
+    padding: 0.25rem;
+    font-weight: bold;
+    min-width: 220px;
 }
 
 .free{
