--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,12 @@ body{
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 1px solid grey;
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
+
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 .flex-container{
@@ -20,7 +25,12 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.25rem;
+    padding: 1.0rem;
+
+    &-section{
+        display: flex;
+        align-items: baseline;
+    }
 }
 
 .btn-default{
@@ -32,6 +42,7 @@ body{
     text-decoration: none;
     text-align: center;
     margin: 0.25rem;
+    width: 8rem;
 
     i{
         font-size: 18px;
