--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -12,3 +12,5 @@ $layout-breakpoint-lg: 992px;
 $lg-menu-width: 20%;
 $mainMargin: 3rem;
 
+$font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
