--- a/public/css/app.css
+++ b/public/css/app.css
@@ -90,10 +90,6 @@
 }
 
 .form-submit a {
-  /*position: absolute;
-  right: 5%;
-  top: 50%;
-  transform: translate(0,-50%);*/
   margin-top: 0.5rem;
   color: white;
   cursor: pointer;
@@ -230,11 +226,6 @@
     margin-bottom: 1rem;
   }
 
-  main {
-    position: relative;
-    height: 91.5vh;
-  }
-
   main .content {
     position: absolute;
     left: 0;
@@ -315,11 +306,6 @@
             animation-name: hover;
     -webkit-animation-duration: 1s;
             animation-duration: 1s;
-  }
-
-  main {
-    position: relative;
-    height: 88.5vh;
   }
 
   main .menu {
@@ -450,11 +436,6 @@
             animation-duration: 1s;
   }
 
-  main {
-    position: relative;
-    height: 88.5vh;
-  }
-
   main .menu {
     position: absolute;
     left: 0;
@@ -548,7 +529,11 @@ header .profile img {
 }
 
 main {
-  margin-bottom: 3rem;
+  position: fixed;
+  top: 15.75vh;
+  bottom: 2.5vh;
+  height: auto;
+  width: 100%;
 }
 
 .footer {
@@ -593,6 +578,8 @@ main {
   display: block;
   background-color: red;
   padding: 0.25rem;
+  margin-bottom: 0.5rem;
+  border: 1px solid grey;
   font-weight: bold;
   text-align: center;
 }
@@ -605,6 +592,7 @@ main {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  overflow-y: scroll;
 }
 
 .content .info-table {
@@ -714,6 +702,82 @@ main {
   stroke: #ff9f00;
 }
 
+.form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-section {
+  width: 45%;
+}
+
+.form-section-fieldset {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  padding: 0.75rem;
+  border: 1px solid grey;
+  border-radius: 0.5rem;
+}
+
+.form-section-search {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-section-search__input {
+  text-indent: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.form-section-search__icon {
+  position: absolute;
+  color: grey;
+  padding: 0.25rem;
+  left: 1rem;
+  top: 1rem;
+  transform: translate(-50%, -50%);
+}
+
+.form-section-search__results {
+  display: none;
+  border: 1px solid grey;
+  padding: 0.75rem;
+  position: absolute;
+  background-color: #0d0d0d;
+  top: 2.25rem;
+  right: 0;
+  left: 0;
+}
+
+.form-section-search__results span {
+  display: block;
+}
+
+.form input {
+  background-color: #1a1a1a;
+  padding: 0.5rem;
+  border: 1px solid grey;
+  color: white;
+  font-size: 1rem;
+  margin: 0.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.form select {
+  background-color: #1a1a1a;
+  padding: 0.5rem 1rem;
+  border: 1px solid grey;
+  color: white;
+  font-size: 1rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.form label {
+  padding: 0.5rem;
+}
+
 body {
   background-color: black;
   color: white;
@@ -721,10 +785,6 @@ body {
   border: 1px solid grey;
   margin: 0;
   padding: 0;
-}
-
-body::-webkit-scrollbar {
-  display: none;
 }
 
 .flex-container {
@@ -751,7 +811,6 @@ body::-webkit-scrollbar {
   color: white;
   text-decoration: none;
   text-align: center;
-  margin: 0.25rem;
   width: 8rem;
 }
 
@@ -772,5 +831,20 @@ body::-webkit-scrollbar {
 .active {
   background-color: white;
   color: black;
+}
+
+/* width */
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* Track */
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 0.5rem;
 }
 
