--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,18 +3,16 @@
 @import './login/login';
 @import './dash/dash';
 @import './components/charts/circular.scss';
+@import './general-forms/forms.scss';
 
 body{
     background-color: $dark;
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: $font;
     border: 1px solid grey;
     margin: 0;
     padding: 0;
-
-    &::-webkit-scrollbar{
-        display: none;
-    }
+    // overflow: hidden;
 }
 
 .flex-container{
@@ -41,7 +39,6 @@ body{
     color: white;
     text-decoration: none;
     text-align: center;
-    margin: 0.25rem;
     width: 8rem;
 
     i{
@@ -61,4 +58,25 @@ body{
     background-color: white;
     color: black;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 1rem;
+  }
+  
+/* Track */
+// ::-webkit-scrollbar-track {
+// box-shadow: inset 0 0 5px grey; 
+// }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: grey;
+border-radius: 0.5rem; 
+}
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+// background: darkgrey; 
+// }
 
