--- a/resources/sass/general-forms/forms.scss
+++ b/resources/sass/general-forms/forms.scss
@@ -1,52 +1,48 @@
-.form{
+.reservation-form{
     display: flex;
     justify-content: space-between;
 
-    &-section {
-        // display: flex;
-        width: 45%;
+    &-fieldset {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+        padding: 0.75rem;
+        border: 1px solid grey;
+        border-radius: 0.5rem;
+        width: 100%;
+    }
 
-        &-fieldset {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 1rem;
-            padding: 0.75rem;
-            border: 1px solid grey;
-            border-radius: 0.5rem;
+    &-search {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        
+        &__input{
+            text-indent: 1.5rem;
+            margin-bottom: 0.5rem;
         }
 
-        &-search {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            
-            &__input{
-                text-indent: 1.5rem;
-                margin-bottom: 0.5rem;
-            }
+        &__icon{
+            position: absolute;
+            color: grey;
+            padding: 0.25rem;
+            left: 1.5rem;
+            top: 1.5rem;
+            transform: translate(-50%, -50%);
+        }
 
-            &__icon{
-                position: absolute;
-                color: grey;
-                padding: 0.25rem;
-                left: 1rem;
-                top: 1rem;
-                transform: translate(-50%, -50%);
-            }
+        &__results{
+            display: none;
+            border: 1px solid grey;
+            padding: 0.75rem;
+            position: absolute;
+            background-color: $darkxgrey;
+            top: 2.25rem;
+            right: 0;
+            left: 0;
 
-            &__results{
-                display: none;
-                border: 1px solid grey;
-                padding: 0.75rem;
-                position: absolute;
-                background-color: $darkxgrey;
-                top: 2.25rem;
-                right: 0;
-                left: 0;
-
-                span {
-                    display: block;
-                }
+            span {
+                display: block;
             }
         }
     }
@@ -59,9 +55,9 @@
         font-size: 1rem;
         margin: 0.5rem;
         font-family: $font;
-
+    
     }
-
+    
     select {
         background-color: $darkgrey;
         padding: 0.5rem 1rem;
@@ -70,9 +66,18 @@
         font-size: 1rem;
         font-family: $font;
     }
-
+    
     label {
         padding: 0.5rem;
     }
+}
+
+.reservation-forms-section{
+    width: 45%;
+}
+
+.reservation-forms{
+    display: flex;
+    justify-content: space-between;
 }
 
