--- a/resources/sass/general-forms/forms.scss
+++ b/resources/sass/general-forms/forms.scss
@@ -32,18 +32,26 @@
         }
 
         &__results{
-            display: none;
+            // display: none;
             border: 1px solid grey;
-            padding: 0.75rem;
+            padding: 0.5rem;
             position: absolute;
             background-color: $darkxgrey;
             top: 2.25rem;
-            right: 0;
-            left: 0;
+            right: 1rem;
+            left: 1rem;
 
             span {
                 display: block;
+                padding: 0.25rem;
+                cursor: pointer;
+
+                &:hover{
+                    color: black;
+                    background-color: lightslategrey;
+                }
             }
+
         }
     }
 
